--- a/accueil.css
+++ b/accueil.css
@@ -103,3 +103,16 @@
 
 
 }
+
+.fab fa-github {
+
+ margin-top 30px
+ color: #ffffff
+}
+
+.fab fa-github:hover {
+
+ margin-top 30px
+ color: #000000
+
+}
