--- a/tommy.css
+++ b/tommy.css
@@ -9,6 +9,27 @@ body {
   text-align: center;
 }
 
+.paragraphedebz {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  color: #ffffff;
+  line-height: 1.3;
+  text-align: center;
+  background-color: rgb(12, 12, 12);
+  border-radius: 50px;
+  padding: 40px 50px;
+  width: 550px;
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+  margin-top: -20px;
+  box-shadow: 2px 2px 400px -60px #ffffff ;
+  text-shadow: 2px 2px 60px #ffffff;
+  transition: 0.5s ease-in;
+
+}
+
 .h1 {
 
   margin-top: 10px;
