--- a/tommy.css
+++ b/tommy.css
@@ -1,98 +1,110 @@
 
 body {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: normal;
-  font-size: 18px;
-  color: #ffffff;
-  line-height: 1.3;
-  padding: 20px;
-  text-align: center;
-}
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+    color: #ffffff;
+    line-height: 1.3;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .paragraphedebz {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: #ffffff;
+    line-height: 1.3;
+    text-align: center;
+    background-color: rgb(12, 12, 12);
+    border-radius: 50px;
+    padding: 40px 50px;
+    width: 550px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+    margin-top: -50px;
+    box-shadow: 2px 2px 400px -60px #ffffff ;
+    text-shadow: 2px 2px 60px #ffffff;
+    transition: 0.5s ease-in;
 
-.paragraphedebz {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 17px;
-  color: #ffffff;
-  line-height: 1.3;
-  text-align: center;
-  background-color: rgb(12, 12, 12);
-  border-radius: 50px;
-  padding: 40px 50px;
-  width: 550px;
-  max-width: 100%;
-  margin: 0 auto;
-  display: block;
-  margin-top: -20px;
-  box-shadow: 2px 2px 400px -60px #ffffff ;
-  text-shadow: 2px 2px 60px #ffffff;
-  transition: 0.5s ease-in;
+  }
 
-}
+    .paragraphedebz:hover {
 
-.h1 {
+        background-color:rgb(31, 31, 31);
+        padding: 60px 70px;
+        width: 650px;
+        max-width: 100%;
+     
+     
 
-  margin-top: 10px;
-  font-weight: 900;
-  font-size: 30px;
-  font-family: 'Montserrat', sans-serif;
-  text-shadow: 1px 1px 90px #ffffff;
-
-
-
-}
-
-.menu-btn {
-  background-color: #000000;
-  color: rgb(255, 255, 255);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  padding: 20px 40px;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: 0.3s ease;
-  margin-top: 90px;
-  box-shadow: 2px 2px 900px -20px #ffffff ;
-
-}
-
-.menu-btn:hover {
-  background-color: hsl(0, 0%, 100%);
-}
-
-
-.logodelamort {
-
-width: 500px;
-transition: 0.5s ease;
-
-}
-
-.logodelamort:hover {
-
-width: 700px;
-
-}
-
-.footer {
-
-font-size: 15px;
-color:rgb(180, 180, 180);
-margin-top: 110px;
-}
-
-.tktrohya {
-
-  margin-top: 80px;
-
-
-}
-
-.p {
-
-  text-shadow: 3px 3px 20px #ffffff;
-
-
-}
+  
+  }
+  
+  .h1 {
+  
+    margin-top: 10px;
+    font-weight: 900;
+    font-size: 30px;
+    font-family: 'Montserrat', sans-serif;
+    text-shadow: 1px 1px 90px #ffffff;
+  
+  
+  
+  }
+  
+  .menu-btn {
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    padding: 20px 40px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: 0.3s ease;
+    margin-top: 90px;
+    box-shadow: 2px 2px 900px -20px #ffffff ;
+  
+  }
+  
+  .menu-btn:hover {
+    background-color: hsl(0, 0%, 100%);
+  }
+  
+  
+  .logodelamort {
+  
+  width: 500px;
+  transition: 0.5s ease;
+  
+  }
+  
+  .logodelamort:hover {
+  
+  width: 700px;
+  
+  }
+  
+  .footer {
+  
+  font-size: 15px;
+  color:rgb(180, 180, 180);
+  margin-top: 110px;
+  }
+  
+  .tktrohya {
+  
+    margin-top: 80px;
+  
+  
+  }
+  
+  .p {
+  
+    text-shadow: 3px 3px 20px #ffffff;
+  
+  
+  }
