--- a/tommy.css
+++ b/tommy.css
@@ -49,6 +49,7 @@ body {
     font-size: 30px;
     font-family: 'Montserrat', sans-serif;
     text-shadow: 1px 1px 90px #ffffff;
+    transform: rotate(-90deg);
   
   
   
