--- a/accueil.css
+++ b/accueil.css
@@ -1,5 +1,5 @@
 
-  body {
+body {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     font-size: 18px;
@@ -8,10 +8,55 @@
     padding: 20px;
     text-align: center;
   }
+  
+  .paragraphedebz {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: #ffffff;
+    line-height: 1.3;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    filter: blur(10px);
+    border-radius: 50px;
+    padding: 40px 50px;
+    width: 550px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+    margin-top: 60px;
+    box-shadow: 2px 2px 400px -60px #ffffff ;
+    text-shadow: 2px 2px 60px #ffffff;
+    transition: 0.5s ease-in;
 
+  }
 
+    .paragraphedebz:hover {
 
-.menu-btn {
+        background-color:rgb(31, 31, 31);
+        padding: 60px 70px;
+        width: 650px;
+        max-width: 100%;
+     
+     
+
+  
+  }
+  
+  .h1 {
+  
+    margin-top: -30px;
+    font-weight: 900;
+    font-size: 30px;
+    font-family: 'Montserrat', sans-serif;
+    text-shadow: 1px 1px 90px #ffffff;
+    transform: rotate(-3deg);
+  
+  
+  
+  }
+  
+  .menu-btn {
     background-color: #000000;
     color: rgb(255, 255, 255);
     font-family: 'Montserrat', sans-serif;
@@ -24,92 +69,44 @@
     transition: 0.3s ease;
     margin-top: 90px;
     box-shadow: 2px 2px 900px -20px #ffffff ;
-
-}
-
-.arriereplan {
-    filter: blur(20px);
-    background-image: url("windows.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%; 
-
-}
-
-.menu-btn:hover {
-    background-color: hsl(0, 0%, 100%);
-}
-
-.paragraphedebz {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 17px;
-  color: #ffffff;
-  line-height: 1.3;
-  text-align: center;
-  background-color: rgb(12, 12, 12);
-  border-radius: 50px;
-  padding: 40px 50px;
-  width: 550px;
-  max-width: 100%;
-  margin: 0 auto;
-  display: block;
-  margin-top: -20px;
-  box-shadow: 2px 2px 400px -60px #ffffff ;
-  text-shadow: 2px 2px 60px #ffffff;
-  transition: 0.5s ease-in;
   
-
-}
-
-.paragraphedebz:hover {
-
-   background-color:rgb(31, 31, 31);
-   padding: 60px 70px;
-   width: 650px;
-   max-width: 100%;
-
-
-}
-
-
-
-.logodelamort {
-
+  }
+  
+  .menu-btn:hover {
+    background-color: hsl(0, 0%, 100%);
+  }
+  
+  
+  .logodelamort {
+  
   width: 500px;
   transition: 0.5s ease;
-
-}
-
-.logodelamort:hover {
-
+  
+  }
+  
+  .logodelamort:hover {
+  
   width: 700px;
-
-}
-
-.footer {
-
+  
+  }
+  
+  .footer {
+  
   font-size: 15px;
   color:rgb(180, 180, 180);
   margin-top: 110px;
-}
-
-.ml {
-
-  width: 200px;
-
-}
-
-.h1 {
-
-  margin-top: -30px;
-  margin-bottom: 100px;
-  font-weight: 900;
-  font-size: 30px;
-  font-family: 'Montserrat', sans-serif;
-  text-shadow: 1px 1px 90px #ffffff;
-
-
-
-}
+  }
+  
+  .tktrohya {
+  
+    margin-top: 80px;
+  
+  
+  }
+  
+  .p {
+  
+    text-shadow: 3px 3px 20px #ffffff;
+  
+  
+  }
