--- a/accueil.css
+++ b/accueil.css
@@ -33,7 +33,8 @@ body {
 
     .paragraphedebz:hover {
 
-        background-color:rgb(31, 31, 31);
+    background-color: rgb(31,31,31);
+    filter: blur(10px);
         padding: 60px 70px;
         width: 650px;
         max-width: 100%;
