--- a/accueil.css
+++ b/accueil.css
@@ -28,6 +28,7 @@ body {
     box-shadow: 2px 2px 400px -60px #ffffff ;
     text-shadow: 2px 2px 60px #ffffff;
     transition: 0.5s ease-in;
+    z-index: 1;
 
   }
   
