--- a/accueil.css
+++ b/accueil.css
@@ -16,7 +16,7 @@ body {
     color: #ffffff;
     line-height: 1.3;
     text-align: center;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(31,31,31);
     filter: blur(10px);
     border-radius: 50px;
     padding: 40px 50px;
