--- a/accueil.css
+++ b/accueil.css
@@ -10,25 +10,26 @@ body {
   margin: 0; 
 }
 
-.paragraphedebz {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 17px;
-  color: #ffffff;
-  line-height: 1.3;
-  text-align: center;
-  background-color: rgb(31, 31, 31);
-  backdrop-filter: blur(10px);
-  border-radius: 50px;
-  padding: 40px 50px;
-  width: 550px;
-  max-width: 100%;
-  margin: 60px auto 0;
-  display: block;
-  box-shadow: 2px 2px 400px -60px #ffffff;
-  text-shadow: 2px 2px 60px #ffffff;
-  transition: 0.5s ease-in;
-  z-index: 1; 
+   .paragraphedebz {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        font-size: 17px;
+        color: #000000;
+        line-height: 1.3;
+        text-align: center;
+        background-color: rgb(255, 255, 255);
+        backdrop-filter: blur(30px);
+        backdrop-filter: opacity(60%);
+        border-radius: 50px;
+        padding: 40px 50px;
+        width: 550px;
+        max-width: 100%;
+        margin: 60px auto 0;
+        display: block;
+        box-shadow: 2px 2px 400px -60px #000000;
+        text-shadow: 2px 2px 60px #000000;
+        transition: 0.5s ease-in;
+        z-index: 1; 
 }
 
 .h1 {
