--- a/accueil.css
+++ b/accueil.css
@@ -10,22 +10,24 @@ body {
   margin: 0; 
 }
 
-   .paragraphedebz {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-        font-size: 17px;
-        color: #000000;
-        line-height: 1.3;
-        text-align: center;
-        background-color: rgb(255, 255, 255);
-        backdrop-filter: blur(30px);
-        border-radius: 50px;
-        padding: 40px 50px;
-        width: 550px;
-        max-width: 100%;
-        margin: 60px auto 0;
-        display: block;
-        z-index: 1; 
+.paragraphedebz {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: #000000;
+    line-height: 1.3;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5); /* Fond semi-transparent */
+    backdrop-filter: blur(30px);
+    border-radius: 50px;
+    padding: 40px 50px;
+    width: 550px;
+    max-width: 100%;
+    margin: 60px auto 0;
+    display: block;
+    z-index: 1;
+    position: relative; /* Assurez-vous que l'élément est positionné */
+    isolation: isolate; /* Optionnel, pour améliorer le rendu */
 }
 
 .h1 {
