--- a/accueil.css
+++ b/accueil.css
@@ -28,6 +28,24 @@ body {
     z-index: 1;
 }
 
+.paragraphedebz:hover {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: #000000;
+    line-height: 1.3;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
+    backdrop-filter: blur(20px);
+    border-radius: 50px;
+    padding: 40px 50px;
+    width: 650px;
+    max-width: 100%;
+    margin: 60px auto 0;
+    display: block;
+    z-index: 1;
+}
+
 .h1 {
   margin-top: -30px;
   font-weight: 900;
