--- a/accueil.css
+++ b/accueil.css
@@ -26,6 +26,7 @@ body {
     margin: 60px auto 0;
     display: block;
     z-index: 1;
+    transition: 0.5s ease-in;
 }
 
 .paragraphedebz:hover {
@@ -38,7 +39,7 @@ body {
     background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
     backdrop-filter: blur(20px);
     border-radius: 50px;
-    padding: 40px 50px;
+    padding: 45px 55px;
     width: 650px;
     max-width: 100%;
     margin: 60px auto 0;
