--- a/accueil.css
+++ b/accueil.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 17px;
-    color: #000000;
+    color: #ffffff;
     line-height: 1.3;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
