--- a/accueil.css
+++ b/accueil.css
@@ -16,7 +16,7 @@ body {
     font-size: 17px;
     color: #ffffff;
     box-shadow: 2px 2px 400px -60px #000000 ;
-    text-shadow: 2px 2px 60px #000000;
+    text-shadow: 1px 1px 40px #000000;
     line-height: 1.3;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
@@ -36,6 +36,8 @@ body {
     font-weight: 400;
     font-size: 17px;
     color: #000000;
+    box-shadow: 2px 2px 400px -30px #000000 ;
+    text-shadow: 1px 1px 40px #000000;
     line-height: 1.3;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
