--- a/accueil.css
+++ b/accueil.css
@@ -35,9 +35,9 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 17px;
-    color: #000000;
-    box-shadow: 2px 2px 400px -30px #000000 ;
-    text-shadow: 1px 1px 40px #000000;
+    color: #ffffff;
+    box-shadow: 2px 2px 400px -30px #ffffff ;
+    text-shadow: 1px 1px 40px #ffffff;
     line-height: 1.3;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
