--- a/accueil.css
+++ b/accueil.css
@@ -28,7 +28,7 @@ body {
     margin: 60px auto 0;
     display: block;
     z-index: 1;
-    transition: 0.5s ease-in;
+    transition: 1s ease-in-out;
 }
 
 .paragraphedebz:hover {
