--- a/tommy.css
+++ b/tommy.css
@@ -8,39 +8,60 @@ body {
     padding: 20px;
     text-align: center;
   }
-  
-  .paragraphedebz {
+
+.paragraphedebz {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 17px;
     color: #ffffff;
+    box-shadow: 2px 2px 300px -30px #000000 ;
+    text-shadow: 1px 1px 10px #000000;
     line-height: 1.3;
     text-align: center;
-    background-color: rgb(12, 12, 12);
+    background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
+    backdrop-filter: blur(20px);
     border-radius: 50px;
     padding: 40px 50px;
     width: 550px;
     max-width: 100%;
-    margin: 0 auto;
+    margin: 60px auto 0;
     display: block;
-    margin-top: 60px;
-    box-shadow: 2px 2px 400px -60px #ffffff ;
-    text-shadow: 2px 2px 60px #ffffff;
-    transition: 0.5s ease-in;
+    z-index: 1;
+    transition: 1s ease-in-out;
+}
 
-  }
+.arriereplan {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('windows.jpg');
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px);
+  z-index: -1; 
+}
 
-    .paragraphedebz:hover {
-
-        background-color:rgb(31, 31, 31);
-        padding: 60px 70px;
-        width: 650px;
-        max-width: 100%;
-     
-     
-
-  
-  }
+.paragraphedebz:hover {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    color: #ffffff;
+    box-shadow: 2px 2px 400px -30px #ffffff ;
+    text-shadow: 1px 1px 40px #ffffff;
+    line-height: 1.3;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2); /* Fond semi-transparent */
+    backdrop-filter: blur(20px);
+    border-radius: 50px;
+    padding: 45px 55px;
+    width: 650px;
+    max-width: 100%;
+    margin: 60px auto 0;
+    display: block;
+    z-index: 1;
+}
   
   .h1 {
   
