--- a/tommy.css
+++ b/tommy.css
@@ -71,6 +71,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     text-shadow: 1px 1px 90px #ffffff;
     transform: rotate(-3deg);
+    z-index: 2;
   
   
   
@@ -113,7 +114,7 @@ body {
   .footer {
   
   font-size: 15px;
-  color:rgb(180, 180, 180);
+  color:rgb(255,255,255);
   margin-top: 110px;
   }
   
